--- a/CarRentApp/Src/Views/Users/Customer/CustomerView.xaml
+++ b/CarRentApp/Src/Views/Users/Customer/CustomerView.xaml
@@ -1,6 +1,7 @@
 <UserControl x:Class="CarRentApp.Views.Users.Customer.CustomerView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:sys="clr-namespace:System;assembly=mscorlib">
     <Grid Background="#F3F4F6">
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
 
@@ -26,6 +27,26 @@
                         <StackPanel Margin="10">
                             <TextBlock Text="Pick a car for rent:" FontSize="20" FontWeight="Bold" Margin="0,0,0,10"/>
                             
+                            <StackPanel Orientation="Horizontal" Margin="0,5">
+                                <TextBlock Text="Pick rental start date:" FontSize="15" Margin="0, 0, 10, 5"/>
+                                <DatePicker SelectedDateFormat="Long" 
+                                            FirstDayOfWeek="Monday"
+                                            IsTodayHighlighted="True"
+                                            DisplayDateStart="{x:Static sys:DateTime.Now}"
+                                            Width="200"
+                                            x:Name="StartDatePicker"/>
+                            </StackPanel>
+                            
+                            <StackPanel Orientation="Horizontal" Margin="0,5">
+                                <TextBlock Text="Pick rental end date:" FontSize="15" Margin="0, 0, 10, 5"/>
+                                <DatePicker SelectedDateFormat="Long" 
+                                            FirstDayOfWeek="Monday"
+                                            IsTodayHighlighted="True"
+                                            DisplayDateStart="{x:Static sys:DateTime.Today}"
+                                            Width="200"
+                                            x:Name="EndDatePicker"/>
+                            </StackPanel>
+                            
                             <!-- Car List -->
                             <DataGrid x:Name="CarDataGrid"
                                       AutoGenerateColumns="False"
@@ -33,7 +54,8 @@
                                       Height="160"
                                       IsReadOnly="True"
                                       CanUserAddRows="False"
-                                      CanUserDeleteRows="False">
+                                      CanUserDeleteRows="False"
+                                      Margin="0, 10, 0, 0">
 
                                 <!-- Style to color rows based on CarState -->
                                 <DataGrid.RowStyle>
